# batch-balanco

./: .gitignore  CMakeLists.txt  README.md
include/: GLCall.hpp  Logger.hpp  OpenGLShader.hpp  Result.hpp  ResultTypes.hpp  Shader.hpp  SpriteBatch.hpp  Texture.hpp  Types.hpp
src/: OpenGLShader.cpp  Shader.cpp  SpriteBatch.cpp  Texture.cpp
